[gd_scene load_steps=12 format=3 uid="uid://d3f48qd16xhq0"]

[ext_resource type="Script" uid="uid://dsg18upe6jwsr" path="res://Scenes/World/UI/figthing_control_ui.gd" id="1_6xxie"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tw3cw"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.1, 0.1, 0.1, 0.3)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n4kib"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(1, 1, 1, 0.75)
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5
expand_margin_left = 2.0
expand_margin_top = 2.0
expand_margin_right = 2.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8ejrg"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.225, 0.225, 0.225, 0.6)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[sub_resource type="CanvasTexture" id="CanvasTexture_n53md"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_tregp"]
texture = SubResource("CanvasTexture_n53md")
axis_stretch_horizontal = 1
modulate_color = Color(0, 0, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wms6t"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0, 0, 0, 0.6)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[sub_resource type="CanvasTexture" id="CanvasTexture_g5tb3"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_kbeso"]
texture = SubResource("CanvasTexture_g5tb3")
modulate_color = Color(0.0196078, 0, 1, 1)

[sub_resource type="FontFile" id="FontFile_ax1on"]
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/17/0/ascent = 0.0
cache/0/17/0/descent = 0.0
cache/0/17/0/underline_position = 0.0
cache/0/17/0/underline_thickness = 0.0
cache/0/17/0/scale = 1.0
cache/0/18/0/ascent = 0.0
cache/0/18/0/descent = 0.0
cache/0/18/0/underline_position = 0.0
cache/0/18/0/underline_thickness = 0.0
cache/0/18/0/scale = 1.0
cache/0/19/0/ascent = 0.0
cache/0/19/0/descent = 0.0
cache/0/19/0/underline_position = 0.0
cache/0/19/0/underline_thickness = 0.0
cache/0/19/0/scale = 1.0
cache/0/20/0/ascent = 0.0
cache/0/20/0/descent = 0.0
cache/0/20/0/underline_position = 0.0
cache/0/20/0/underline_thickness = 0.0
cache/0/20/0/scale = 1.0
cache/0/21/0/ascent = 0.0
cache/0/21/0/descent = 0.0
cache/0/21/0/underline_position = 0.0
cache/0/21/0/underline_thickness = 0.0
cache/0/21/0/scale = 1.0
cache/0/22/0/ascent = 0.0
cache/0/22/0/descent = 0.0
cache/0/22/0/underline_position = 0.0
cache/0/22/0/underline_thickness = 0.0
cache/0/22/0/scale = 1.0
cache/0/23/0/ascent = 0.0
cache/0/23/0/descent = 0.0
cache/0/23/0/underline_position = 0.0
cache/0/23/0/underline_thickness = 0.0
cache/0/23/0/scale = 1.0
cache/0/24/0/ascent = 0.0
cache/0/24/0/descent = 0.0
cache/0/24/0/underline_position = 0.0
cache/0/24/0/underline_thickness = 0.0
cache/0/24/0/scale = 1.0
cache/0/25/0/ascent = 0.0
cache/0/25/0/descent = 0.0
cache/0/25/0/underline_position = 0.0
cache/0/25/0/underline_thickness = 0.0
cache/0/25/0/scale = 1.0
cache/0/26/0/ascent = 0.0
cache/0/26/0/descent = 0.0
cache/0/26/0/underline_position = 0.0
cache/0/26/0/underline_thickness = 0.0
cache/0/26/0/scale = 1.0
cache/0/27/0/ascent = 0.0
cache/0/27/0/descent = 0.0
cache/0/27/0/underline_position = 0.0
cache/0/27/0/underline_thickness = 0.0
cache/0/27/0/scale = 1.0
cache/0/28/0/ascent = 0.0
cache/0/28/0/descent = 0.0
cache/0/28/0/underline_position = 0.0
cache/0/28/0/underline_thickness = 0.0
cache/0/28/0/scale = 1.0
cache/0/29/0/ascent = 0.0
cache/0/29/0/descent = 0.0
cache/0/29/0/underline_position = 0.0
cache/0/29/0/underline_thickness = 0.0
cache/0/29/0/scale = 1.0
cache/0/30/0/ascent = 0.0
cache/0/30/0/descent = 0.0
cache/0/30/0/underline_position = 0.0
cache/0/30/0/underline_thickness = 0.0
cache/0/30/0/scale = 1.0
cache/0/31/0/ascent = 0.0
cache/0/31/0/descent = 0.0
cache/0/31/0/underline_position = 0.0
cache/0/31/0/underline_thickness = 0.0
cache/0/31/0/scale = 1.0
cache/0/32/0/ascent = 0.0
cache/0/32/0/descent = 0.0
cache/0/32/0/underline_position = 0.0
cache/0/32/0/underline_thickness = 0.0
cache/0/32/0/scale = 1.0
cache/0/33/0/ascent = 0.0
cache/0/33/0/descent = 0.0
cache/0/33/0/underline_position = 0.0
cache/0/33/0/underline_thickness = 0.0
cache/0/33/0/scale = 1.0
cache/0/34/0/ascent = 0.0
cache/0/34/0/descent = 0.0
cache/0/34/0/underline_position = 0.0
cache/0/34/0/underline_thickness = 0.0
cache/0/34/0/scale = 1.0
cache/0/35/0/ascent = 0.0
cache/0/35/0/descent = 0.0
cache/0/35/0/underline_position = 0.0
cache/0/35/0/underline_thickness = 0.0
cache/0/35/0/scale = 1.0
cache/0/36/0/ascent = 0.0
cache/0/36/0/descent = 0.0
cache/0/36/0/underline_position = 0.0
cache/0/36/0/underline_thickness = 0.0
cache/0/36/0/scale = 1.0
cache/0/37/0/ascent = 0.0
cache/0/37/0/descent = 0.0
cache/0/37/0/underline_position = 0.0
cache/0/37/0/underline_thickness = 0.0
cache/0/37/0/scale = 1.0
cache/0/38/0/ascent = 0.0
cache/0/38/0/descent = 0.0
cache/0/38/0/underline_position = 0.0
cache/0/38/0/underline_thickness = 0.0
cache/0/38/0/scale = 1.0
cache/0/39/0/ascent = 0.0
cache/0/39/0/descent = 0.0
cache/0/39/0/underline_position = 0.0
cache/0/39/0/underline_thickness = 0.0
cache/0/39/0/scale = 1.0
cache/0/40/0/ascent = 0.0
cache/0/40/0/descent = 0.0
cache/0/40/0/underline_position = 0.0
cache/0/40/0/underline_thickness = 0.0
cache/0/40/0/scale = 1.0
cache/0/41/0/ascent = 0.0
cache/0/41/0/descent = 0.0
cache/0/41/0/underline_position = 0.0
cache/0/41/0/underline_thickness = 0.0
cache/0/41/0/scale = 1.0
cache/0/42/0/ascent = 0.0
cache/0/42/0/descent = 0.0
cache/0/42/0/underline_position = 0.0
cache/0/42/0/underline_thickness = 0.0
cache/0/42/0/scale = 1.0
cache/0/43/0/ascent = 0.0
cache/0/43/0/descent = 0.0
cache/0/43/0/underline_position = 0.0
cache/0/43/0/underline_thickness = 0.0
cache/0/43/0/scale = 1.0
cache/0/44/0/ascent = 0.0
cache/0/44/0/descent = 0.0
cache/0/44/0/underline_position = 0.0
cache/0/44/0/underline_thickness = 0.0
cache/0/44/0/scale = 1.0
cache/0/45/0/ascent = 0.0
cache/0/45/0/descent = 0.0
cache/0/45/0/underline_position = 0.0
cache/0/45/0/underline_thickness = 0.0
cache/0/45/0/scale = 1.0
cache/0/46/0/ascent = 0.0
cache/0/46/0/descent = 0.0
cache/0/46/0/underline_position = 0.0
cache/0/46/0/underline_thickness = 0.0
cache/0/46/0/scale = 1.0
cache/0/47/0/ascent = 0.0
cache/0/47/0/descent = 0.0
cache/0/47/0/underline_position = 0.0
cache/0/47/0/underline_thickness = 0.0
cache/0/47/0/scale = 1.0
cache/0/48/0/ascent = 0.0
cache/0/48/0/descent = 0.0
cache/0/48/0/underline_position = 0.0
cache/0/48/0/underline_thickness = 0.0
cache/0/48/0/scale = 1.0
cache/0/49/0/ascent = 0.0
cache/0/49/0/descent = 0.0
cache/0/49/0/underline_position = 0.0
cache/0/49/0/underline_thickness = 0.0
cache/0/49/0/scale = 1.0
cache/0/50/0/ascent = 0.0
cache/0/50/0/descent = 0.0
cache/0/50/0/underline_position = 0.0
cache/0/50/0/underline_thickness = 0.0
cache/0/50/0/scale = 1.0
cache/0/51/0/ascent = 0.0
cache/0/51/0/descent = 0.0
cache/0/51/0/underline_position = 0.0
cache/0/51/0/underline_thickness = 0.0
cache/0/51/0/scale = 1.0
cache/0/52/0/ascent = 0.0
cache/0/52/0/descent = 0.0
cache/0/52/0/underline_position = 0.0
cache/0/52/0/underline_thickness = 0.0
cache/0/52/0/scale = 1.0
cache/0/53/0/ascent = 0.0
cache/0/53/0/descent = 0.0
cache/0/53/0/underline_position = 0.0
cache/0/53/0/underline_thickness = 0.0
cache/0/53/0/scale = 1.0
cache/0/54/0/ascent = 0.0
cache/0/54/0/descent = 0.0
cache/0/54/0/underline_position = 0.0
cache/0/54/0/underline_thickness = 0.0
cache/0/54/0/scale = 1.0
cache/0/55/0/ascent = 0.0
cache/0/55/0/descent = 0.0
cache/0/55/0/underline_position = 0.0
cache/0/55/0/underline_thickness = 0.0
cache/0/55/0/scale = 1.0
cache/0/56/0/ascent = 0.0
cache/0/56/0/descent = 0.0
cache/0/56/0/underline_position = 0.0
cache/0/56/0/underline_thickness = 0.0
cache/0/56/0/scale = 1.0
cache/0/57/0/ascent = 0.0
cache/0/57/0/descent = 0.0
cache/0/57/0/underline_position = 0.0
cache/0/57/0/underline_thickness = 0.0
cache/0/57/0/scale = 1.0
cache/0/58/0/ascent = 0.0
cache/0/58/0/descent = 0.0
cache/0/58/0/underline_position = 0.0
cache/0/58/0/underline_thickness = 0.0
cache/0/58/0/scale = 1.0
cache/0/59/0/ascent = 0.0
cache/0/59/0/descent = 0.0
cache/0/59/0/underline_position = 0.0
cache/0/59/0/underline_thickness = 0.0
cache/0/59/0/scale = 1.0
cache/0/60/0/ascent = 0.0
cache/0/60/0/descent = 0.0
cache/0/60/0/underline_position = 0.0
cache/0/60/0/underline_thickness = 0.0
cache/0/60/0/scale = 1.0
cache/0/61/0/ascent = 0.0
cache/0/61/0/descent = 0.0
cache/0/61/0/underline_position = 0.0
cache/0/61/0/underline_thickness = 0.0
cache/0/61/0/scale = 1.0
cache/0/62/0/ascent = 0.0
cache/0/62/0/descent = 0.0
cache/0/62/0/underline_position = 0.0
cache/0/62/0/underline_thickness = 0.0
cache/0/62/0/scale = 1.0
cache/0/63/0/ascent = 0.0
cache/0/63/0/descent = 0.0
cache/0/63/0/underline_position = 0.0
cache/0/63/0/underline_thickness = 0.0
cache/0/63/0/scale = 1.0
cache/0/64/0/ascent = 0.0
cache/0/64/0/descent = 0.0
cache/0/64/0/underline_position = 0.0
cache/0/64/0/underline_thickness = 0.0
cache/0/64/0/scale = 1.0
cache/0/65/0/ascent = 0.0
cache/0/65/0/descent = 0.0
cache/0/65/0/underline_position = 0.0
cache/0/65/0/underline_thickness = 0.0
cache/0/65/0/scale = 1.0
cache/0/66/0/ascent = 0.0
cache/0/66/0/descent = 0.0
cache/0/66/0/underline_position = 0.0
cache/0/66/0/underline_thickness = 0.0
cache/0/66/0/scale = 1.0
cache/0/67/0/ascent = 0.0
cache/0/67/0/descent = 0.0
cache/0/67/0/underline_position = 0.0
cache/0/67/0/underline_thickness = 0.0
cache/0/67/0/scale = 1.0
cache/0/68/0/ascent = 0.0
cache/0/68/0/descent = 0.0
cache/0/68/0/underline_position = 0.0
cache/0/68/0/underline_thickness = 0.0
cache/0/68/0/scale = 1.0
cache/0/69/0/ascent = 0.0
cache/0/69/0/descent = 0.0
cache/0/69/0/underline_position = 0.0
cache/0/69/0/underline_thickness = 0.0
cache/0/69/0/scale = 1.0
cache/0/70/0/ascent = 0.0
cache/0/70/0/descent = 0.0
cache/0/70/0/underline_position = 0.0
cache/0/70/0/underline_thickness = 0.0
cache/0/70/0/scale = 1.0
cache/0/71/0/ascent = 0.0
cache/0/71/0/descent = 0.0
cache/0/71/0/underline_position = 0.0
cache/0/71/0/underline_thickness = 0.0
cache/0/71/0/scale = 1.0
cache/0/72/0/ascent = 0.0
cache/0/72/0/descent = 0.0
cache/0/72/0/underline_position = 0.0
cache/0/72/0/underline_thickness = 0.0
cache/0/72/0/scale = 1.0
cache/0/15/0/ascent = 0.0
cache/0/15/0/descent = 0.0
cache/0/15/0/underline_position = 0.0
cache/0/15/0/underline_thickness = 0.0
cache/0/15/0/scale = 1.0

[sub_resource type="Theme" id="Theme_nf2ed"]
default_font = SubResource("FontFile_ax1on")
Button/colors/font_color = Color(1, 1, 1, 1)
Button/colors/font_disabled_color = Color(0, 0, 0, 1)
Button/colors/font_focus_color = Color(0, 0, 0, 1)
Button/colors/font_hover_color = Color(0, 0, 0, 1)
Button/colors/font_hover_pressed_color = Color(0, 0, 0, 1)
Button/colors/font_outline_color = Color(0, 0, 0, 1)
Button/colors/font_pressed_color = Color(0, 0, 0, 1)
Button/colors/icon_disabled_color = Color(0, 0, 0, 1)
Button/colors/icon_focus_color = Color(0, 0, 0, 1)
Button/colors/icon_hover_color = Color(0, 0, 0, 1)
Button/colors/icon_hover_pressed_color = Color(0, 0, 0, 1)
Button/colors/icon_normal_color = Color(0, 0, 0, 1)
Button/colors/icon_pressed_color = Color(0, 0, 0, 1)
Button/constants/align_to_largest_stylebox = 0
Button/constants/h_separation = 0
Button/constants/icon_max_width = 0
Button/constants/outline_size = 0
Button/font_sizes/font_size = 16
Button/styles/disabled = SubResource("StyleBoxFlat_tw3cw")
Button/styles/focus = SubResource("StyleBoxFlat_n4kib")
Button/styles/hover = SubResource("StyleBoxFlat_8ejrg")
Button/styles/normal = SubResource("StyleBoxTexture_tregp")
Button/styles/pressed = SubResource("StyleBoxFlat_wms6t")
HBoxContainer/constants/separation = 13
Panel/styles/panel = SubResource("StyleBoxTexture_kbeso")

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource("Theme_nf2ed")
script = ExtResource("1_6xxie")
metadata/_edit_horizontal_guides_ = [500.0, 650.0, 525.0, 550.0, 575.0, 600.0, 625.0, 400.0, 425.0, 450.0, 475.0]
metadata/_edit_vertical_guides_ = [0.0, 1150.0, 750.0, 25.0, 200.0, 75.0, 500.0, 525.0, 725.0, 775.0, 800.0, 1125.0, 925.0, 600.0]

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = -148.0
offset_right = 1.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 0

[node name="Panel" type="Panel" parent="Panel"]
layout_mode = 1
offset_right = 749.0
offset_bottom = 150.0

[node name="Player_Name_Label" type="Label" parent="Panel/Panel"]
layout_mode = 1
offset_left = 24.0
offset_top = 25.0
offset_right = 200.0
offset_bottom = 50.0
text = "Player 1"

[node name="Player_HP_Label" type="Label" parent="Panel/Panel"]
layout_mode = 1
offset_left = 25.0
offset_top = 74.0
offset_right = 75.0
offset_bottom = 100.0
text = "HP:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Player_MP_Label" type="Label" parent="Panel/Panel"]
layout_mode = 1
offset_left = 25.0
offset_top = 101.0
offset_right = 75.0
offset_bottom = 126.0
text = "MP:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Player_HP_Progress_Bar" type="ProgressBar" parent="Panel/Panel"]
layout_mode = 1
offset_left = 75.0
offset_top = 74.0
offset_right = 500.0
offset_bottom = 101.0
step = 1.0
value = 100.0
show_percentage = false

[node name="Player_MP_Progress_Bar" type="ProgressBar" parent="Panel/Panel"]
layout_mode = 1
offset_left = 75.0
offset_top = 99.0
offset_right = 500.0
offset_bottom = 126.0
step = 1.0
value = 100.0
show_percentage = false

[node name="Player_Action_Progress_Bar" type="ProgressBar" parent="Panel/Panel"]
layout_mode = 1
offset_left = 200.0
offset_top = 24.0
offset_right = 500.0
offset_bottom = 51.0
step = 0.1
show_percentage = false

[node name="Attack_Button" type="Button" parent="Panel/Panel"]
layout_mode = 1
offset_left = 525.0
offset_top = 25.0
offset_right = 726.0
offset_bottom = 49.0
disabled = true
text = "Attack"
alignment = 0
clip_text = true

[node name="Defense_Button" type="Button" parent="Panel/Panel"]
layout_mode = 1
offset_left = 523.0
offset_top = 51.0
offset_right = 724.0
offset_bottom = 75.0
text = "Defense"
alignment = 0
clip_text = true

[node name="Object_Button" type="Button" parent="Panel/Panel"]
layout_mode = 1
offset_left = 525.0
offset_top = 75.0
offset_right = 726.0
offset_bottom = 99.0
text = "Object"
alignment = 0
clip_text = true

[node name="Run_Button" type="Button" parent="Panel/Panel"]
layout_mode = 1
offset_left = 524.0
offset_top = 101.0
offset_right = 725.0
offset_bottom = 125.0
text = "Run"
alignment = 0
clip_text = true

[node name="Panel_Enemy_Selector" type="ItemList" parent="Panel/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.801
anchor_top = -0.66
anchor_right = 0.967
anchor_bottom = 0.333
offset_left = 0.0509644
offset_right = -0.28302
offset_bottom = 0.0499992
grow_horizontal = 2
grow_vertical = 0

[node name="Back_Button" type="Button" parent="Panel/Panel/Panel_Enemy_Selector"]
layout_mode = 2
offset_top = 125.0
offset_right = 124.0
offset_bottom = 148.0
text = "Back"
alignment = 0

[node name="Panel2" type="Panel" parent="Panel"]
visible = false
layout_mode = 1
offset_left = 776.0
offset_right = 1148.0
offset_bottom = 150.0

[node name="Enemy_Name_Label" type="Label" parent="Panel/Panel2"]
layout_mode = 1
offset_left = 27.0
offset_top = 27.0
offset_right = 149.0
offset_bottom = 52.0
text = "Enemy"

[node name="Enemy_HP_Label" type="Label" parent="Panel/Panel2"]
layout_mode = 1
offset_left = 25.0
offset_top = 74.0
offset_right = 75.0
offset_bottom = 100.0
text = "HP:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Enemy_MP_Label" type="Label" parent="Panel/Panel2"]
layout_mode = 1
offset_left = 25.0
offset_top = 101.0
offset_right = 75.0
offset_bottom = 126.0
text = "MP:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Enemy_HP_Progress_Bar" type="ProgressBar" parent="Panel/Panel2"]
layout_mode = 1
offset_left = 75.0
offset_top = 74.0
offset_right = 348.0
offset_bottom = 101.0
step = 1.0
value = 100.0
show_percentage = false

[node name="Enemy_MP_Progress_Bar" type="ProgressBar" parent="Panel/Panel2"]
layout_mode = 1
offset_left = 75.0
offset_top = 99.0
offset_right = 348.0
offset_bottom = 126.0
step = 1.0
value = 100.0
show_percentage = false

[node name="PlayerTimer" type="Timer" parent="."]
one_shot = true

[node name="EnemyTimer" type="Timer" parent="."]
wait_time = 8.0
one_shot = true

[connection signal="pressed" from="Panel/Panel/Attack_Button" to="." method="_on_attack_button_pressed"]
[connection signal="item_clicked" from="Panel/Panel/Panel_Enemy_Selector" to="." method="_on_panel_enemy_selector_item_clicked"]
[connection signal="pressed" from="Panel/Panel/Panel_Enemy_Selector/Back_Button" to="." method="_on_back_button_pressed"]
[connection signal="timeout" from="PlayerTimer" to="." method="_on_player_timer_timeout"]
[connection signal="timeout" from="EnemyTimer" to="." method="_on_enemy_timer_timeout"]
